Robot/sw_repo/.metadata/.plugins/org.eclipse.cdt.ui/arduino_4wdmoto.build.log
15:29:55 **** Auto Build of configuration Debug for project arduino_4wdmoto ****
make all 
Building file: ../src/4WD_MOTO.c
Invoking: MicroBlaze gcc compiler
mb-gcc -Wall -O0 -g3 -I../../bsp_iop_arduino_mb/iop_arduino_mb/include -c -fmessage-length=0 -MT"src/4WD_MOTO.o" -mlittle-endian -mcpu=v10.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/4WD_MOTO.d" -MT"src/4WD_MOTO.o" -o "src/4WD_MOTO.o" "../src/4WD_MOTO.c"
../src/4WD_MOTO.c: In function 'init_ardumoto':
../src/4WD_MOTO.c:103:6: warning: unused variable 'temp' [-Wunused-variable]
  u32 temp;
      ^~~~
Finished building: ../src/4WD_MOTO.c
 
Building file: ../src/arduino_4wdmoto.c
Invoking: MicroBlaze gcc compiler
mb-gcc -Wall -O0 -g3 -I../../bsp_iop_arduino_mb/iop_arduino_mb/include -c -fmessage-length=0 -MT"src/arduino_4wdmoto.o" -mlittle-endian -mcpu=v10.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/arduino_4wdmoto.d" -MT"src/arduino_4wdmoto.o" -o "src/arduino_4wdmoto.o" "../src/arduino_4wdmoto.c"
../src/arduino_4wdmoto.c: In function 'main':
../src/arduino_4wdmoto.c:114:21: error: 'STATUS_A' undeclared (first use in this function); did you mean 'XSTATUS_H'?
           move_left(STATUS_A, speed);
                     ^~~~~~~~
                     XSTATUS_H
../src/arduino_4wdmoto.c:114:21: note: each undeclared identifier is reported only once for each function it appears in
../src/arduino_4wdmoto.c:114:11: error: too many arguments to function 'move_left'
           move_left(STATUS_A, speed);
src/subdir.mk:24: recipe for target 'src/arduino_4wdmoto.o' failed
           ^~~~~~~~~
In file included from ../src/arduino_4wdmoto.c:51:0:
../src/4WD_MOTO.h:28:6: note: declared here
 void move_left(unsigned int speed);
      ^~~~~~~~~
../src/arduino_4wdmoto.c:117:11: error: too many arguments to function 'move_right'
           move_right(STATUS_A, speed);
           ^~~~~~~~~~
In file included from ../src/arduino_4wdmoto.c:51:0:
../src/4WD_MOTO.h:29:6: note: declared here
 void move_right(unsigned int speed);
      ^~~~~~~~~~
../src/arduino_4wdmoto.c:120:21: error: 'STATUS_B' undeclared (first use in this function); did you mean 'STATUS_A'?
           move_left(STATUS_B, speed);
                     ^~~~~~~~
                     STATUS_A
../src/arduino_4wdmoto.c:120:11: error: too many arguments to function 'move_left'
           move_left(STATUS_B, speed);
           ^~~~~~~~~
In file included from ../src/arduino_4wdmoto.c:51:0:
../src/4WD_MOTO.h:28:6: note: declared here
 void move_left(unsigned int speed);
      ^~~~~~~~~
../src/arduino_4wdmoto.c:123:11: error: too many arguments to function 'move_right'
           move_right(STATUS_B, speed);
           ^~~~~~~~~~
In file included from ../src/arduino_4wdmoto.c:51:0:
../src/4WD_MOTO.h:29:6: note: declared here
 void move_right(unsigned int speed);
      ^~~~~~~~~~
../src/arduino_4wdmoto.c:70:15: warning: unused variable 'v' [-Wunused-variable]
  unsigned int v;
               ^
make: *** [src/arduino_4wdmoto.o] Error 1

15:29:55 Build Finished (took 236ms)

